@@ -4062,90 +4062,90 @@ WINBASEAPI PUMS_CONTEXT GetCurrentUmsThread(void);
 
 extern "C++" {
     FORCEINLINE unsigned InterlockedIncrement(unsigned volatile *Addend) {
-        return (unsigned)InterlockedIncrement((volatile long*)Addend);
+        return (unsigned)InterlockedIncrement((volatile LONG*)Addend);
     }
 
     FORCEINLINE unsigned long InterlockedIncrement(unsigned long volatile *Addend) {
-        return (unsigned long)InterlockedIncrement((volatile long*)Addend);
+        return (unsigned long)InterlockedIncrement((volatile LONG*)Addend);
     }
 
     FORCEINLINE unsigned __int64 InterlockedIncrement(unsigned __int64 volatile *Addend) {
-        return (unsigned __int64)InterlockedIncrement64((volatile __int64*)Addend);
+        return (unsigned __int64)InterlockedIncrement64((volatile LONGLONG*)Addend);
     }
 
     FORCEINLINE unsigned InterlockedDecrement(unsigned volatile *Addend) {
-        return (unsigned long)InterlockedDecrement((volatile long*)Addend);
+        return (unsigned long)InterlockedDecrement((volatile LONG*)Addend);
     }
 
     FORCEINLINE unsigned long InterlockedDecrement(unsigned long volatile *Addend) {
-        return (unsigned long)InterlockedDecrement((volatile long*)Addend);
+        return (unsigned long)InterlockedDecrement((volatile LONG*)Addend);
     }
 
     FORCEINLINE unsigned __int64 InterlockedDecrement(unsigned __int64 volatile *Addend) {
-        return (unsigned __int64)InterlockedDecrement64((volatile __int64*)Addend);
+        return (unsigned __int64)InterlockedDecrement64((volatile LONGLONG*)Addend);
     }
 
     FORCEINLINE unsigned InterlockedExchange(unsigned volatile *Target, unsigned Value) {
-        return (unsigned)InterlockedExchange((volatile long*) Target, (long)Value);
+        return (unsigned)InterlockedExchange((volatile LONG*) Target, (LONG)Value);
     }
 
     FORCEINLINE unsigned long InterlockedExchange(unsigned long volatile *Target, unsigned long Value) {
-        return (unsigned long)InterlockedExchange((volatile long*)Target, (long)Value);
+        return (unsigned long)InterlockedExchange((volatile LONG*)Target, (LONG)Value);
     }
 
     FORCEINLINE unsigned __int64 InterlockedExchange(unsigned __int64 volatile *Target, unsigned __int64 Value) {
-        return (unsigned __int64)InterlockedExchange64((volatile __int64*)Target, (__int64)Value);
+        return (unsigned __int64)InterlockedExchange64((volatile LONGLONG*)Target, (LONGLONG)Value);
     }
 
     FORCEINLINE unsigned InterlockedExchangeAdd(unsigned volatile *Addend, unsigned Value) {
-        return (unsigned)InterlockedExchangeAdd((volatile long*)Addend, (long)Value);
+        return (unsigned)InterlockedExchangeAdd((volatile LONG*)Addend, (LONG)Value);
     }
 
     FORCEINLINE unsigned InterlockedExchangeSubtract(unsigned volatile *Addend, unsigned Value) {
-        return (unsigned)InterlockedExchangeAdd((volatile long*)Addend, -(long)Value);
+        return (unsigned)InterlockedExchangeAdd((volatile LONG*)Addend, -(LONG)Value);
     }
 
     FORCEINLINE unsigned long InterlockedExchangeAdd(unsigned long volatile *Addend, unsigned long Value) {
-        return (unsigned long)InterlockedExchangeAdd((volatile long*)Addend, (long)Value);
+        return (unsigned long)InterlockedExchangeAdd((volatile LONG*)Addend, (LONG)Value);
     }
 
     FORCEINLINE unsigned long InterlockedExchangeSubtract(unsigned long volatile *Addend, unsigned long Value) {
-        return (unsigned long)InterlockedExchangeAdd((volatile long*)Addend, -(long)Value);
+        return (unsigned long)InterlockedExchangeAdd((volatile LONG*)Addend, -(LONG)Value);
     }
 
     FORCEINLINE unsigned __int64 InterlockedExchangeAdd(unsigned __int64 volatile *Addend, unsigned __int64 Value) {
-        return (unsigned __int64)InterlockedExchangeAdd64((volatile __int64*)Addend,  (__int64)Value);
+        return (unsigned __int64)InterlockedExchangeAdd64((volatile LONGLONG*)Addend,  (LONGLONG)Value);
     }
 
     FORCEINLINE unsigned __int64 InterlockedExchangeSubtract(unsigned __int64 volatile *Addend, unsigned __int64 Value) {
-        return (unsigned __int64)InterlockedExchangeAdd64((volatile __int64*)Addend, -(__int64)Value);
+        return (unsigned __int64)InterlockedExchangeAdd64((volatile LONGLONG*)Addend, -(LONGLONG)Value);
     }
 
     FORCEINLINE unsigned InterlockedCompareExchange(unsigned volatile *Destination, unsigned Exchange, unsigned Comperand) {
-        return (unsigned)InterlockedCompareExchange((volatile long*)Destination, (long)Exchange, (long)Comperand);
+        return (unsigned)InterlockedCompareExchange((volatile LONG*)Destination, (LONG)Exchange, (LONG)Comperand);
     }
 
     FORCEINLINE unsigned long InterlockedCompareExchange(unsigned long volatile *Destination, unsigned long Exchange,
                                                          unsigned long Comperand) {
-        return (unsigned long)InterlockedCompareExchange((volatile long*)Destination, (long)Exchange, (long)Comperand);
+        return (unsigned long)InterlockedCompareExchange((volatile LONG*)Destination, (LONG)Exchange, (LONG)Comperand);
     }
 
     FORCEINLINE unsigned __int64 InterlockedAnd(unsigned __int64 volatile *Destination, unsigned __int64 Value) {
-        return (unsigned __int64)InterlockedAnd64((volatile __int64*)Destination, (__int64)Value);
+        return (unsigned __int64)InterlockedAnd64((volatile LONGLONG*)Destination, (LONGLONG)Value);
     }
 
     FORCEINLINE unsigned __int64 InterlockedOr(unsigned __int64 volatile *Destination, unsigned __int64 Value) {
-        return (unsigned __int64)InterlockedOr64((volatile __int64*)Destination, (__int64)Value);
+        return (unsigned __int64)InterlockedOr64((volatile LONGLONG*)Destination, (LONGLONG)Value);
     }
 
     FORCEINLINE unsigned __int64 InterlockedXor(unsigned __int64 volatile *Destination, unsigned __int64 Value) {
-        return (unsigned __int64)InterlockedXor64((volatile __int64*)Destination, (__int64)Value);
+        return (unsigned __int64)InterlockedXor64((volatile LONGLONG*)Destination, (LONGLONG)Value);
     }
 
     FORCEINLINE unsigned __int64 InterlockedCompareExchange(unsigned __int64 volatile *Destination, unsigned __int64 Exchange,
                                                             unsigned __int64 Comperand) {
-        return (unsigned __int64)InterlockedCompareExchange64((volatile __int64*)Destination, (__int64)Exchange,
-                                                              (__int64)Comperand);
+        return (unsigned __int64)InterlockedCompareExchange64((volatile LONGLONG*)Destination, (LONGLONG)Exchange,
+                                                              (LONGLONG)Comperand);
     }
 }
 
